# package_shipping_app

./: .dockerignore  .env  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_08_1827-b5c0ba2502ee_create_packages_types_table.py  2024_02_08_1832-9e9fd6350e0c_create_packagedb_table.py
api/middleware/: session.py
api/utility/: logging_config.py
docker/: api.Dockerfile  prestart.sh  run_server.sh
models/: __init__.py  base.py  db_helper.py  package.py
price_updater/: celery_worker.py  price_update_db.py  usd_price.py
